crates/analyzer/tests/snapshots/errors__pow_with_signed_exponent.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: cannot find value `exp` in this scope
  ┌─ [snippet]:5:11
  │
5 │   base ** exp
  │           ^^^ undefined


